--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -216,6 +216,16 @@ steps:
         agents:
           slurm_mem: 20GB
 
+      - label: ":computer: SSP zalesak tracer upwind baroclinic wave (ρe_tot) equilmoist"
+        command:
+          - julia --color=yes --project=examples examples/hybrid/driver.jl --initial_condition MoistBaroclinicWave --moist equil --precip_model 0M --job_id sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist_dt150_newton3_no_threading --dt 150secs --dt_save_to_disk 1days --ode_algo SSP333 --max_newton_iters 3 --tracer_upwinding zalesak
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist_dt150_newton3_no_threading --out_dir sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist_dt150_newton3_no_threading
+          - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist_dt150_newton3_no_threading --fig_dir sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist_dt150_newton3_no_threading
+          - julia --color=yes --project=examples regression_tests/test_mse.jl --job_id sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist_dt150_newton3_no_threading --out_dir sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist_dt150_newton3_no_threading
+        artifact_paths: "sphere_zalesak_upwind_ssp_baroclinic_wave_rhoe_equilmoist_dt150_newton3_no_threading/*"
+        agents:
+          slurm_mem: 20GB
+
       - label: ":computer: no lim ARS baroclinic wave (ρe) equilmoist check conservation float64"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist equil --initial_condition MoistBaroclinicWave --rad clearsky --job_id sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64 --check_conservation true --FLOAT_TYPE Float64 --dt 450secs --t_end 8days --dt_save_to_disk 8days --apply_limiter false"
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64/*"
